--- a/w1/index.html
+++ b/w1/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
 
-    <div>
-        <h1>Danny DeLuca</h1>
-        <p>Hi! Some infor about me...</p>
+    <div style="border: 5px solid black" >
+        <h1 style="border: 5px solid blue">Danny DeLuca</h1>
+        <p style="border: 5px solid yellowgreen">Hi! Some info about me...
+            My name is Dan. I am from Barrington, RI. This is my second term at NEIT. I enjoy working out, watching basketball, and the UFC. Fun fact: I am Brads favorite person:) 
+        </p>
+
     </div>
     
 </body>
