--- a/w1/index.html
+++ b/w1/index.html
@@ -11,7 +11,7 @@
     <div style="border: 5px solid black" >
         <h1 style="border: 5px solid blue">Danny DeLuca</h1>
         <p style="border: 5px solid yellowgreen">Hi! Some info about me...
-            My name is <b>Dan</b>. I am from Barrington, RI. This is my second term at <strong>NEIT</strong>. I enjoy working out, watching basketball, and the <em>UFC</em>. Fun fact: I am Brads favorite person:) 
+            My name is <b>Dan</b>. I am from Barrington, RI. This is my second term at <strong>NEIT</strong>. I enjoy working out, watching <u>basketball</u>, and the <em>UFC</em>. Fun fact: I am Brads favorite person:) 
         </p>
 
     </div>
