--- a/file-paths-correct/characters.html
+++ b/file-paths-correct/characters.html
@@ -22,7 +22,7 @@
         <hr>
         <nav>
              <!--link to the index and characters pages-->
-            <a href="">HOME</a> | <a href="">CHARACTERS</a>
+            <a href="index.html">HOME</a> | <a href="characters.html">CHARACTERS</a>
         </nav>
         <hr>
         <section>
@@ -45,7 +45,7 @@
         <hr>
         <footer id="footer">
                 <!--link to neit-tiger.png-->
-                <img src="" alt="NEIT Tiger Mascot">
+                <img src="../file-paths-correct/images/main-images/neit-tiger.png" alt="NEIT Tiger Mascot">
                 <br>
                 <!--link to the header tag-->
                 <a href="">Back to Top</a>
