--- a/w4_movie/index.html
+++ b/w4_movie/index.html
@@ -67,7 +67,8 @@
             <!--section header[whick page were currently on]-->
             <h2><b>ABOUT</b> <em>The Wolf Of Wall Street</em></h2>
 
-            <p>A breif introduction to/overview of the movie <em>The Wolf Of Wall Street</em></p>
+            <p>Based on a true story, Jordan Belfort rose to the top of Wall Street. He founded his own trading firm. Fueled by sex, drugs, and partying he knowingly defrauded his investors and became a main target of the FBI and SEC.</p> 
+            <p><em>The Wolf Of Wall Street</em></p>
 
             <img src="images/The_Wolf_of_Wall_Street_(2013).png" alt="The Wolf Of Wall Street official moview poster from 2013", style="width:600px" title="Damn">
 
