--- a/w4_movie/review.html
+++ b/w4_movie/review.html
@@ -87,7 +87,7 @@
                 </ul>
             </div>
 
-            <p>A breif introduction to/overview of the movie <em>The Wolf Of Wall Street</em></p>
+            <p>Based on a true story, Jordan Belfort rose to the top of Wall Street. He founded his own trading firm. Fueled by sex, drugs, and partying he knowingly defrauded his investors and became a main target of the FBI and SEC. <em>The Wolf Of Wall Street</em></p>
 
 
         </div><!--/#content-->
