--- a/w4_movie/review.html
+++ b/w4_movie/review.html
@@ -67,7 +67,7 @@
             <p><b> Danny DeLuca</b> <i> August 10, 2023</i></p>
             <p>&#9733;&#9733;&#9733;&#9733;&#9733;</p>
 
-            <img src="images/Wall_Street__Broadway-267x300.jpg" alt="The Wolf Of Wall Street", style="width:200px" title="Damn">
+            <img src="images/Wall_Street__Broadway-267x300.jpg" alt="The Wolf Of Wall Street" style="width:200px" title="Damn">
 
             <p>This movie makes you think, how could any of this be true? Well, it's based on real people and real events. This  movie will be remembered for for a long time. I would describe this movie like a roller coaster because I felt invested in the cast and went on the ride through their ups and downs</p>
             <p>Martin Scorsese was the perfect person to be directed. The whole cast was selected perfectly. Leonardo DiCaprio is one of my favorite actors and he brought out every emotion in this film. Excellent job! I would highly recommend this film to anyone with a sense of humor and can appreciate a good story.  </p>
