--- a/w4_movie/cast.html
+++ b/w4_movie/cast.html
@@ -126,7 +126,10 @@
 
         </div><!--/#content-->
 
+        <div> <img src="images/Validation page Cast.JPG" alt="Validation"> </div>
+
         <hr>
+
 
 
         <div id="footer">
