--- a/w4_movie/review.html
+++ b/w4_movie/review.html
@@ -92,6 +92,8 @@
 
         </div><!--/#content-->
 
+        <div> <img src="images/Validation page review.JPG" alt="Validation"></div>
+
         <hr>
 
 
@@ -109,9 +111,8 @@
             <!--image of califation screenshot for this-->
             
 
-            <!--
-            <img src="" alt="Validation of _ page">
-            -->
+           
+
         <hr>
 
 
