--- a/W6_demo/index.html
+++ b/W6_demo/index.html
@@ -53,14 +53,17 @@
 
         alert(`Hi there ${fname}`)
 
-        var age = prompt(`Enter your age: `)
+        var age = Number(prompt(`Enter your age: `))
 
-        var dogYears = age * 7
+        var dogYears = (age * 7).toFixed(2)
 
         console.log(`In doggy years you are: ${dogYears}yo`)
 
         //if you run into string/number ixing issues --> cast as a Number
         //num= Number(num) //var num = Number(prompt("Enter a number:"))
+
+        //show numbers rounded to specific decimal places--> .tofixed(#)
+        console.log(`Your age is: ${age.toFixed(2)}`)
 
 
 
