--- a/W6_Calculator/index.html
+++ b/W6_Calculator/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="W6 Demo- Intro to JS">
     
     <title>W6 | Calculator |</title>
+     <!--in document CSS-->
+     <style>
+        /*we are writing CSS*/
+        body{
+            background-color:royalblue
+        }
+    </style>
 </head>
 <body>
      <!--we should have some sort of HTML in the file/body for base content-->
