--- a/W6_Calculator/index.html
+++ b/W6_Calculator/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
      <!--we should have some sort of HTML in the file/body for base content-->
-     <h1>Week 6 Calculator | Javescipt</h1>
+     <h1>Week 6 Calculator | Javascipt</h1>
 
      <!--IN DOCUMENT JAVSCRIPT livs in the html file itself, should always be after any HTML content on the page-->
      <script>
