--- a/W6_Calculator/index.html
+++ b/W6_Calculator/index.html
@@ -59,7 +59,7 @@
  
          //show numbers rounded to specific decimal places--> .tofixed(#)
          console.log(`Your net pay is: ${sum.toFixed(2)}`)
-         
+         alert(`Gross Pay: ${gpay}` `\nUncle Sam: ${unclesam}` `\nYour net pay is: ${sum.toFixed(2)}`)
 
          </script>
  
