--- a/W6_Calculator/index.html
+++ b/W6_Calculator/index.html
@@ -41,7 +41,7 @@
  
          alert(`Hi there ${fname}`)
 
-         var hours = Number(prompt(`Emter the number of hours you worked in the past 2 weeks: `))
+         var hours = Number(prompt(`Enter the number of hours you worked in the past 2 weeks: `))
          var hourlypay = Number(prompt(`Emter your rate of pay: `))
          
 
