--- a/w8-1/w8_HW/index.html
+++ b/w8-1/w8_HW/index.html
@@ -41,14 +41,14 @@
 		var firstName = document.getElementById("first")
 		var lastName = document.getElementById("last")
 		var submitButton = document.getElementById("button")
-		var output = document.getElementById("output")
+		var outputDiv = document.getElementById("output")
 
 		//Make an array to store the people
 		 var people = []
 		
 
 		//Make the button clickable. When clicked it calls the calcAndDisplay function.
-		submitButton.addEventListener("click", calcAndDisplay)
+		document.querySelector(`#button`).addEventListener("click", calcAndDisplay)
 		
 		/*-----------------------------------------------------
 		Will add objects into the people array. 
@@ -73,8 +73,8 @@
 				//2. last: will be a string that uses the last Input's value
 
             var person = {
-				first: firstNameInput.value,
-				last: lastNameInput.value
+				first: firstName.value,
+				last: lastName.value
 
 
 
@@ -104,10 +104,10 @@
 			console.log(people)
 
 			//create a variable called 'output' that has an empty string value stored to 
-			var output= (``)
+			var output= ``
 
 			//Loop through the objects in the people array
-			for(let i =0; i< people.length; i++)
+			for(let i =0; i < people.length; i++)
             {
 
 				//Loop through each property in the object
@@ -117,24 +117,21 @@
 					//Output will resemble:
 					//FIRST: Ivan
 					//LAST: Drago
-					output +=`${key.toUpperCase()}: ${people[i][key]}<br>`
+					output += `${key.toUpperCase()}: ${people[i][key]}<br>`
 
                 }
                 //add a <hr> to the output at the end of this outter loop so a horizontal rule is displayed inbetween each person being displayed to the screen.
-				output=+`<hr`;
+				output += `<hr`
 
 
 			}//end of loop going through people array to edit 'output'
 
 				//log the output string
 				//replace the outputDiv's inner HTML with the output string
-				output.innerHTML = output
-
-
+				outputDiv.innerHTML = output
 
 		}
 	
     </script>
-    
 </body>
 </html>
