--- a/Capstone/index.html
+++ b/Capstone/index.html
@@ -120,9 +120,9 @@
         </header>
 
         <nav id="nav">
-            <a href="index.html" class="link">HOME</a>
-            <a href="Team.html" class="link">TEAM</a>
-            <a href="review.html" class="link">REVIEW</a>
+            <a href="index.html" class="link">Home</a>
+            <a href="Team.html" class="link">Team</a>
+            <a href="review.html" class="link">Calculator</a>
         </nav>
 
         <div class="content" id="content">
@@ -137,7 +137,7 @@
         </div>
 
         <div>
-            <img src="images/Movie_validationpage1.JPG" alt="Validation" style="max-width: 100%;">
+        
         </div>
 
         <footer id="footer">
