--- a/Capstone_Second_Site/index.html
+++ b/Capstone_Second_Site/index.html
@@ -151,7 +151,7 @@
         </div><!--/#header-->
 
         <div id="nav">
-            <a href="file:///Z:/Capstone/SE111_202340/Capstone/index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="contactus.html">Contact Us</a>
         </div><!--/#nav-->
 
